--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>深色AV-最新地址发布页</title>
+		<title>深色女友-最新地址发布页</title>
 	  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
         <style>
             *{margin:0;padding:0}
@@ -27,7 +27,7 @@
 	
 		<div class="top">
 			<div class="f24">亲爱的朋友</div>
-			<div class="f16">这里是深色AV最新地址发布页</div>
+			<div class="f16">这里是深色女友最新地址发布页</div>
 		</div>
 		<div class="main">
             <div class="x2"><b>·</b>&nbsp;&nbsp;✨重要提醒✨收藏本页面，避免迷路！&nbsp;&nbsp;<b>·</b></div>
